// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Battery System Status component renders with warning without crashing 1`] = `
<div
  className="battery-status is-flex"
>
  <h1
    className="is-uppercase battery-status-desc1 is-size-7"
  >
    STORAGE SYSTEM INFO
  </h1>
  <div
    className="mt-15 mb-15"
  />
  <div
    className="battery-status-item"
  >
    <div
      className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
    >
      <ForwardRef(SvgInternet) />
    </div>
    <div
      className="battery-status-item-text"
    >
      <h1
        className="is-uppercase is-size-7 "
      >
        INTERNET
        :
      </h1>
      <h1
        className="is-uppercase is-size-7"
      >
        INTERNET_CONNECTED
      </h1>
    </div>
  </div>
  <div
    className="battery-status-item"
  >
    <div
      className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
    >
      <ForwardRef(SvgOffGrid) />
    </div>
    <div
      className="battery-status-item-text"
    >
      <h1
        className="is-uppercase is-size-7"
      >
        BATTERY_GRID_MODE
        :
      </h1>
      <h1
        className="is-uppercase is-size-7"
      >
        BATTERY_MODE_OFFGRID
      </h1>
    </div>
  </div>
  <div
    className="battery-status-item"
  >
    <div
      className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
    >
      <ForwardRef(SvgWarning) />
    </div>
    <div
      className="battery-status-item-text"
    >
      <h1
        className="is-uppercase is-size-7 battery-status-warning"
      >
        BATTERY_WARNING
      </h1>
    </div>
  </div>
  <div
    className="mt-15 mb-15"
  />
</div>
`;

exports[`Battery System Status component renders without crashing 1`] = `
<div
  className="battery-status is-flex"
>
  <h1
    className="is-uppercase battery-status-desc1 is-size-7"
  >
    STORAGE SYSTEM INFO
  </h1>
  <div
    className="mt-15 mb-15"
  />
  <div
    className="battery-status-item"
  >
    <div
      className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
    >
      <ForwardRef(SvgInternet) />
    </div>
    <div
      className="battery-status-item-text"
    >
      <h1
        className="is-uppercase is-size-7 "
      >
        INTERNET
        :
      </h1>
      <h1
        className="is-uppercase is-size-7"
      >
        INTERNET_CONNECTED
      </h1>
    </div>
  </div>
  <div
    className="battery-status-item"
  >
    <div
      className="battery-status-item-icon mt-5 mb-5 mr-10 ml-40"
    >
      <ForwardRef(SvgOffGrid) />
    </div>
    <div
      className="battery-status-item-text"
    >
      <h1
        className="is-uppercase is-size-7"
      >
        BATTERY_GRID_MODE
        :
      </h1>
      <h1
        className="is-uppercase is-size-7"
      >
        BATTERY_MODE_OFFGRID
      </h1>
    </div>
  </div>
  <div
    className="mt-15 mb-15"
  />
</div>
`;
